🐛 Fixing bugs due to merge